changes in Event cards

--- a/front-end/src/app/demo/components/dashboard/dashboard.component.html
+++ b/front-end/src/app/demo/components/dashboard/dashboard.component.html
@@ -330,7 +330,7 @@
                                     <div class="flex flex-row align-items-center justify-content-between mb-1">
 
                                         <div class="mr-3 font-bold">
-                                            {{evento.quantidadePraticantes}} / {{evento.quantidadeParticipantes}}
+                                            {{evento.quantidadeParticipantesAtivos}} / {{evento.quantidadeParticipantes}}
                                         </div>
 
                                         <div class="flex align-items-center justify-content-center">
