--- a/front-end/src/app/layout/app.topbar.component.html
+++ b/front-end/src/app/layout/app.topbar.component.html
@@ -21,13 +21,13 @@
             <i class="pi pi-calendar"></i>
             <span>Calendar</span>
         </button>
-        <button class="p-link layout-topbar-button">
+        <button class="p-link layout-topbar-button" [routerLink]="'/user'">
             <i class="pi pi-user"></i>
             <span>Profile</span>
         </button>
-        <button class="p-link layout-topbar-button" [routerLink]="'/documentation'">
-            <i class="pi pi-cog"></i>
-            <span>Settings</span>
+        <button class="p-link layout-topbar-button" [routerLink]="'/documentation'" (click)="signOut()">
+            <i class="pi pi-sign-out"></i>
+            <span>Sign Out</span>
         </button>
     </div>
 </div>
